--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/style.css" />
 
     <title>FlexBlog</title>
   </head>
