--- a/CSS Grid Layout/index.html
+++ b/CSS Grid Layout/index.html
@@ -14,42 +14,26 @@
 
   <body>
     <div class="estrutura">
+      
       <header class="header">
-        <a href="#" class="logo">
-          <img src="./img/wildbeast.svg" alt="Logo wildbeast" />
-
-          <nav>
-            <ul>
-              <li>
-                <a href="#">sobre</a>
-                <a href="#">animais</a>
-                <a href="#">contato</a>
-              </li>
-            </ul>
-          </nav>
-        </a>
+        <a href="#" class="logo"><img src="img/wildbeast.svg" alt="Wildbeast"></a>
+        <nav>
+          <ul>
+            <li><a href="#">sobre</a></li>
+            <li><a href="#">animais</a></li>
+            <li><a href="#">contato</a></li>
+          </ul>
+        </nav>
       </header>
-
+      
       <nav class="sidenav">
         <ul>
-          <li>
-            <a href="#"><img src="./img/icones/cervo.svg" alt="Cervo" /></a>
-          </li>
-          <li>
-            <a href="#"><img src="./img/icones/leao.svg" alt="Leão" /></a>
-          </li>
-          <li>
-            <a href="#"><img src="./img/icones/gato.svg" alt="Gato" /></a>
-          </li>
-          <li>
-            <a href="#"><img src="./img/icones/vaca.svg" alt="Vaca" /></a>
-          </li>
-          <li>
-            <a href="#"><img src="./img/icones/ovelha.svg" alt="Ovelha" /></a>
-          </li>
-          <li>
-            <a href="#"><img src="./img/icones/abelha.svg" alt="Abelha" /></a>
-          </li>
+          <li><a href="#"><img src="img/icones/cervo.svg" alt="Cervo"></a></li>
+          <li><a href="#"><img src="img/icones/leao.svg" alt="Leão"></a></li>
+          <li><a href="#"><img src="img/icones/gato.svg" alt="Gato"></a></li>
+          <li><a href="#"><img src="img/icones/vaca.svg" alt="Vaca"></a></li>
+          <li><a href="#"><img src="img/icones/ovelha.svg" alt="Ovelha"></a></li>
+          <li><a href="#"><img src="img/icones/abelha.svg" alt="Abelha"></a></li>
         </ul>
       </nav>
 
@@ -141,16 +125,18 @@
 
       <aside class="anuncios">
         <div class="anuncio-item">
-            <img src="./img/anuncio-1.jpg" alt="Anuncio 1">
+          <img src="./img/anuncio-1.jpg" alt="Anuncio 1" />
         </div>
 
         <div class="anuncio-item">
-            <img src="./img/anuncio-2.jpg" alt="Anuncio 2">
+          <img src="./img/anuncio-2.jpg" alt="Anuncio 2" />
         </div>
       </aside>
 
       <footer class="footer">
-        <p>AC - Developer by Origamid © 2012 - 2017. Alguns direitos reservados.</p>
+        <p>
+          AC - Developer by Origamid © 2012 - 2017. Alguns direitos reservados.
+        </p>
       </footer>
     </div>
   </body>
