--- a/CSS Grid Layout/index.html
+++ b/CSS Grid Layout/index.html
@@ -14,9 +14,10 @@
 
   <body>
     <div class="estrutura">
-      
       <header class="header">
-        <a href="#" class="logo"><img src="img/wildbeast.svg" alt="Wildbeast"></a>
+        <a href="#" class="logo"
+          ><img src="img/wildbeast.svg" alt="Wildbeast"
+        /></a>
         <nav>
           <ul>
             <li><a href="#">sobre</a></li>
@@ -25,15 +26,27 @@
           </ul>
         </nav>
       </header>
-      
+
       <nav class="sidenav">
         <ul>
-          <li><a href="#"><img src="img/icones/cervo.svg" alt="Cervo"></a></li>
-          <li><a href="#"><img src="img/icones/leao.svg" alt="Leão"></a></li>
-          <li><a href="#"><img src="img/icones/gato.svg" alt="Gato"></a></li>
-          <li><a href="#"><img src="img/icones/vaca.svg" alt="Vaca"></a></li>
-          <li><a href="#"><img src="img/icones/ovelha.svg" alt="Ovelha"></a></li>
-          <li><a href="#"><img src="img/icones/abelha.svg" alt="Abelha"></a></li>
+          <li>
+            <a href="#"><img src="img/icones/cervo.svg" alt="Cervo" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="img/icones/leao.svg" alt="Leão" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="img/icones/gato.svg" alt="Gato" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="img/icones/vaca.svg" alt="Vaca" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="img/icones/ovelha.svg" alt="Ovelha" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="img/icones/abelha.svg" alt="Abelha" /></a>
+          </li>
         </ul>
       </nav>
 
@@ -49,9 +62,7 @@
             <span class="numero">72</span>
             <span class="rotulo">kg</span>
           </div>
-        </div>
 
-        <div class="caracteristicas">
           <div>
             <span class="numero">13</span>
             <span class="rotulo">age</span>
