--- a/CSS Grid Layout/index.html
+++ b/CSS Grid Layout/index.html
@@ -77,7 +77,7 @@
 
         <img src="./img/wolf1.jpg" alt="Wolf 1" class="imagem-1" />
 
-        <p>
+        <p class="destaque">
           É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior,
           cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos
           genéticos reafirmam que o lobo cinzento é ancestral do cão doméstico.
@@ -99,8 +99,8 @@
           Alasca, Canadá,[8] e na antiga União Soviética.
         </p>
 
-        <blockquote class="citacao">
-          <p class="col-wide">
+        <blockquote class="citacao  col-wide">
+          <p>
             “Há algo no uivar do lobo que tira um homem do aqui e agora e o
             transporta para uma floresta da mente.”
           </p>
