--- a/JavaScript/animaisFantasticos/index.html
+++ b/JavaScript/animaisFantasticos/index.html
@@ -20,7 +20,7 @@
       </ul>
     </nav>
 
-    <section class="grid-section animais" id="animais">
+    <section class="grid-section animais js-scroll" id="animais">
       <h1 class="titulo">Animais Fantásticos</h1>
 
       <ul class="animais-lista js-tabmenu">
@@ -175,7 +175,7 @@
       </div>
     </section>
 
-    <section class="grid-section fac" id="faq">
+    <section class="grid-section fac js-scroll" id="faq">
       <h1 class="titulo">FAQ</h1>
 
       <dl class="faq-lista js-accordion">
@@ -204,7 +204,7 @@
       </dl>
     </section>
 
-    <section class="grid-section contato" id="contato">
+    <section class="grid-section contato js-scroll" id="contato">
       <h1 class="titulo">Contato</h1>
 
       <div class="mapa">
