--- a/JavaScript/animaisFantasticos/index.html
+++ b/JavaScript/animaisFantasticos/index.html
@@ -223,7 +223,7 @@
       <p>Todos os direitos reservados</p>
     </footer>
 
-    <script src="./script.js"></script>
-    <!-- <script src="./exercises.js"></script> -->
+    <script type="module" src="./script.js"></script>
+    <!-- <script src="./modules/exercises.js"></script> -->
   </body>
 </html>
