--- a/JavaScript/animaisFantasticos/index.html
+++ b/JavaScript/animaisFantasticos/index.html
@@ -11,217 +11,235 @@
     <title>Animais Fantásticos</title>
   </head>
   <body>
-    <nav class="menu" data-menu="suave">
-      <ul>
-        <li><a href="#animais">Animais</a></li>
-        <li><a href="#faq">FAQ</a></li>
-        <li><a href="#contato">Contato</a></li>
-        <li><a href="https://andrelcarvalho.netlify.app/">Dev →</a></li>
-      </ul>
-    </nav>
+    <div class="grid-container">
+      <nav class="menu" data-menu="suave">
+        <ul>
+          <li><a href="#animais">Animais</a></li>
+          <li><a href="#faq">FAQ</a></li>
+          <li><a href="#contato">Contato</a></li>
+          <li><a href="" data-modal="open">Login →</a></li>
+        </ul>
+      </nav>
 
-    <section class="grid-section animais" data-anime="scroll" id="animais">
-      <h1 class="titulo">Animais Fantásticos</h1>
+      <section class="grid-section animais" data-anime="scroll" id="animais">
+        <h1 class="titulo">Animais Fantásticos</h1>
 
-      <ul class="animais-lista" data-tab="menu">
-        <li>
-          <img src="./assets/imagem1.jpg" />
-        </li>
-        <li>
-          <img src="./assets/imagem2.jpg" />
-        </li>
-        <li>
-          <img src="./assets/imagem3.jpg" />
-        </li>
-        <li>
-          <img src="./assets/imagem4.jpg" />
-        </li>
-        <li>
-          <img src="./assets/imagem5.jpg" />
-        </li>
-        <li>
-          <img src="./assets/imagem6.jpg" />
-        </li>
-      </ul>
+        <ul class="animais-lista" data-tab="menu">
+          <li>
+            <img src="./assets/imagem1.jpg" />
+          </li>
+          <li>
+            <img src="./assets/imagem2.jpg" />
+          </li>
+          <li>
+            <img src="./assets/imagem3.jpg" />
+          </li>
+          <li>
+            <img src="./assets/imagem4.jpg" />
+          </li>
+          <li>
+            <img src="./assets/imagem5.jpg" />
+          </li>
+          <li>
+            <img src="./assets/imagem6.jpg" />
+          </li>
+        </ul>
 
-      <div class="animais-descricao" data-tab="content">
-        <section data-anime="show-down">
-          <h2>Raposa</h2>
-          <p>
-            As raposas são animais mamíferos e onívoros pertencentes à família
-            Canidae. São vulpídeos de porte médio, caracterizados por um focinho
-            comprido e uma cauda longa e peluda.
-          </p>
-          <p>
-            Também apresentam como particularidade suas pupilas ovais,
-            semelhantes às pupilas verticais dos felídeos.
-          </p>
-        </section>
+        <div class="animais-descricao" data-tab="content">
+          <section data-anime="show-down">
+            <h2>Raposa</h2>
+            <p>
+              As raposas são animais mamíferos e onívoros pertencentes à família
+              Canidae. São vulpídeos de porte médio, caracterizados por um
+              focinho comprido e uma cauda longa e peluda.
+            </p>
+            <p>
+              Também apresentam como particularidade suas pupilas ovais,
+              semelhantes às pupilas verticais dos felídeos.
+            </p>
+          </section>
 
-        <section data-anime="show-down">
-          <h2>Esquilo</h2>
-          <p>
+          <section data-anime="show-down">
+            <h2>Esquilo</h2>
+            <p>
+              As raposas são animais mamíferos e onívoros pertencentes à família
+              Canidae. São vulpídeos de porte médio, caracterizados por um
+              focinho comprido e uma cauda longa e peluda.
+            </p>
+            <p>
+              Também apresentam como particularidade suas pupilas ovais,
+              semelhantes às pupilas verticais dos felídeos.
+            </p>
+            <p>
+              De cerca de 40 espécies reconhecidas como raposas, somente 12
+              pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a
+              raposa vermelha é a mais comum.
+            </p>
+            <p>
+              Também apresentam como particularidade suas pupilas ovais,
+              semelhantes às pupilas verticais dos felídeos.
+            </p>
+            <p>
+              De cerca de 40 espécies reconhecidas como raposas, somente 12
+              pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a
+              raposa vermelha é a mais comum.
+            </p>
+            <p>
+              Também apresentam como particularidade suas pupilas ovais,
+              semelhantes às pupilas verticais dos felídeos.
+            </p>
+          </section>
+          <section data-anime="show-right">
+            <h2>Urso</h2>
+            <p>
+              As raposas são animais mamíferos e onívoros pertencentes à família
+              Canidae. São vulpídeos de porte médio, caracterizados por um
+              focinho comprido e uma cauda longa e peluda.
+            </p>
+            <p>
+              Também apresentam como particularidade suas pupilas ovais,
+              semelhantes às pupilas verticais dos felídeos.
+            </p>
+            <p>
+              De cerca de 40 espécies reconhecidas como raposas, somente 12
+              pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a
+              raposa vermelha é a mais comum.
+            </p>
+            <p>
+              Também apresentam como particularidade suas pupilas ovais,
+              semelhantes às pupilas verticais dos felídeos.
+            </p>
+          </section>
+          <section data-anime="show-right">
+            <h2>Lobo</h2>
+            <p>
+              As raposas são animais mamíferos e onívoros pertencentes à família
+              Canidae. São vulpídeos de porte médio, caracterizados por um
+              focinho comprido e uma cauda longa e peluda.
+            </p>
+            <p>
+              Também apresentam como particularidade suas pupilas ovais,
+              semelhantes às pupilas verticais dos felídeos.
+            </p>
+            <p>
+              De cerca de 40 espécies reconhecidas como raposas, somente 12
+              pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a
+              raposa vermelha é a mais comum.
+            </p>
+            <p>
+              Também apresentam como particularidade suas pupilas ovais,
+              semelhantes às pupilas verticais dos felídeos.
+            </p>
+          </section>
+          <section data-anime="show-down">
+            <h2>Macaco</h2>
+            <p>
+              As raposas são animais mamíferos e onívoros pertencentes à família
+              Canidae. São vulpídeos de porte médio, caracterizados por um
+              focinho comprido e uma cauda longa e peluda.
+            </p>
+            <p>
+              Também apresentam como particularidade suas pupilas ovais,
+              semelhantes às pupilas verticais dos felídeos.
+            </p>
+            <p>
+              De cerca de 40 espécies reconhecidas como raposas, somente 12
+              pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a
+              raposa vermelha é a mais comum.
+            </p>
+            <p>
+              Também apresentam como particularidade suas pupilas ovais,
+              semelhantes às pupilas verticais dos felídeos.
+            </p>
+          </section>
+          <section data-anime="show-down">
+            <h2>Leão</h2>
+            <p>
+              As raposas são animais mamíferos e onívoros pertencentes à família
+              Canidae. São vulpídeos de porte médio, caracterizados por um
+              focinho comprido e uma cauda longa e peluda.
+            </p>
+            <p>
+              Também apresentam como particularidade suas pupilas ovais,
+              semelhantes às pupilas verticais dos felídeos.
+            </p>
+            <p>
+              De cerca de 40 espécies reconhecidas como raposas, somente 12
+              pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a
+              raposa vermelha é a mais comum.
+            </p>
+            <p>
+              Também apresentam como particularidade suas pupilas ovais,
+              semelhantes às pupilas verticais dos felídeos.
+            </p>
+          </section>
+        </div>
+      </section>
+
+      <section class="grid-section fac" data-anime="scroll" id="faq">
+        <h1 class="titulo">FAQ</h1>
+
+        <dl class="faq-lista" data-anime="accordion">
+          <dt>Qual a idade dos animais?</dt>
+          <dd>
             As raposas são animais mamíferos e onívoros pertencentes à família
             Canidae. São vulpídeos de porte médio, caracterizados por um focinho
             comprido e uma cauda longa e peluda.
-          </p>
-          <p>
+          </dd>
+          <dt>Eles são fantásticos?</dt>
+          <dd>
             Também apresentam como particularidade suas pupilas ovais,
             semelhantes às pupilas verticais dos felídeos.
-          </p>
-          <p>
-            De cerca de 40 espécies reconhecidas como raposas, somente 12
-            pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a
-            raposa vermelha é a mais comum.
-          </p>
-          <p>
-            Também apresentam como particularidade suas pupilas ovais,
-            semelhantes às pupilas verticais dos felídeos.
-          </p>
-          <p>
-            De cerca de 40 espécies reconhecidas como raposas, somente 12
-            pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a
-            raposa vermelha é a mais comum.
-          </p>
-          <p>
-            Também apresentam como particularidade suas pupilas ovais,
-            semelhantes às pupilas verticais dos felídeos.
-          </p>
-        </section>
-        <section data-anime="show-right">
-          <h2>Urso</h2>
-          <p>
+          </dd>
+          <dt>Qual a diferença?</dt>
+          <dd>
             As raposas são animais mamíferos e onívoros pertencentes à família
             Canidae. São vulpídeos de porte médio, caracterizados por um focinho
             comprido e uma cauda longa e peluda.
-          </p>
-          <p>
+          </dd>
+          <dt>Como proteger?</dt>
+          <dd>
             Também apresentam como particularidade suas pupilas ovais,
             semelhantes às pupilas verticais dos felídeos.
-          </p>
-          <p>
-            De cerca de 40 espécies reconhecidas como raposas, somente 12
-            pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a
-            raposa vermelha é a mais comum.
-          </p>
-          <p>
-            Também apresentam como particularidade suas pupilas ovais,
-            semelhantes às pupilas verticais dos felídeos.
-          </p>
-        </section>
-        <section data-anime="show-right">
-          <h2>Lobo</h2>
-          <p>
-            As raposas são animais mamíferos e onívoros pertencentes à família
-            Canidae. São vulpídeos de porte médio, caracterizados por um focinho
-            comprido e uma cauda longa e peluda.
-          </p>
-          <p>
-            Também apresentam como particularidade suas pupilas ovais,
-            semelhantes às pupilas verticais dos felídeos.
-          </p>
-          <p>
-            De cerca de 40 espécies reconhecidas como raposas, somente 12
-            pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a
-            raposa vermelha é a mais comum.
-          </p>
-          <p>
-            Também apresentam como particularidade suas pupilas ovais,
-            semelhantes às pupilas verticais dos felídeos.
-          </p>
-        </section>
-        <section data-anime="show-down">
-          <h2>Macaco</h2>
-          <p>
-            As raposas são animais mamíferos e onívoros pertencentes à família
-            Canidae. São vulpídeos de porte médio, caracterizados por um focinho
-            comprido e uma cauda longa e peluda.
-          </p>
-          <p>
-            Também apresentam como particularidade suas pupilas ovais,
-            semelhantes às pupilas verticais dos felídeos.
-          </p>
-          <p>
-            De cerca de 40 espécies reconhecidas como raposas, somente 12
-            pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a
-            raposa vermelha é a mais comum.
-          </p>
-          <p>
-            Também apresentam como particularidade suas pupilas ovais,
-            semelhantes às pupilas verticais dos felídeos.
-          </p>
-        </section>
-        <section data-anime="show-down">
-          <h2>Leão</h2>
-          <p>
-            As raposas são animais mamíferos e onívoros pertencentes à família
-            Canidae. São vulpídeos de porte médio, caracterizados por um focinho
-            comprido e uma cauda longa e peluda.
-          </p>
-          <p>
-            Também apresentam como particularidade suas pupilas ovais,
-            semelhantes às pupilas verticais dos felídeos.
-          </p>
-          <p>
-            De cerca de 40 espécies reconhecidas como raposas, somente 12
-            pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a
-            raposa vermelha é a mais comum.
-          </p>
-          <p>
-            Também apresentam como particularidade suas pupilas ovais,
-            semelhantes às pupilas verticais dos felídeos.
-          </p>
-        </section>
+          </dd>
+        </dl>
+      </section>
+
+      <section class="grid-section contato" data-anime="scroll" id="contato">
+        <h1 class="titulo">Contato</h1>
+
+        <div class="mapa">
+          <img src="./assets/mapa.png" alt="Mapa" />
+        </div>
+
+        <ul class="dados">
+          <li>carvalho.devel@gmail.com</li>
+          <li>+55 (11) 9999-9999</li>
+          <li>Rua do Conde, nº 21</li>
+          <li>São Paulo - SP</li>
+        </ul>
+      </section>
+
+      <footer class="copy">
+        <p>Todos os direitos reservados</p>
+      </footer>
+    </div>
+
+    <section class="modal-container" data-modal="container">
+      <div class="modal">
+        <button data-modal="close" class="close">X</button>
+
+        <form action="">
+          <label for="email">Email</label>
+          <input type="text" for="email" id="email" />
+
+          <label for="password">Senha</label>
+          <input type="password" for="password" id="password" />
+
+          <button type="submit">Entrar</button>
+        </form>
       </div>
     </section>
-
-    <section class="grid-section fac" data-anime="scroll" id="faq">
-      <h1 class="titulo">FAQ</h1>
-
-      <dl class="faq-lista" data-anime="accordion">
-        <dt>Qual a idade dos animais?</dt>
-        <dd>
-          As raposas são animais mamíferos e onívoros pertencentes à família
-          Canidae. São vulpídeos de porte médio, caracterizados por um focinho
-          comprido e uma cauda longa e peluda.
-        </dd>
-        <dt>Eles são fantásticos?</dt>
-        <dd>
-          Também apresentam como particularidade suas pupilas ovais, semelhantes
-          às pupilas verticais dos felídeos.
-        </dd>
-        <dt>Qual a diferença?</dt>
-        <dd>
-          As raposas são animais mamíferos e onívoros pertencentes à família
-          Canidae. São vulpídeos de porte médio, caracterizados por um focinho
-          comprido e uma cauda longa e peluda.
-        </dd>
-        <dt>Como proteger?</dt>
-        <dd>
-          Também apresentam como particularidade suas pupilas ovais, semelhantes
-          às pupilas verticais dos felídeos.
-        </dd>
-      </dl>
-    </section>
-
-    <section class="grid-section contato" data-anime="scroll" id="contato">
-      <h1 class="titulo">Contato</h1>
-
-      <div class="mapa">
-        <img src="./assets/mapa.png" alt="Mapa" />
-      </div>
-
-      <ul class="dados">
-        <li>carvalho.devel@gmail.com</li>
-        <li>+55 (11) 9999-9999</li>
-        <li>Rua do Conde, nº 21</li>
-        <li>São Paulo - SP</li>
-      </ul>
-    </section>
-
-    <footer class="copy">
-      <p>Todos os direitos reservados</p>
-    </footer>
 
     <script type="module" src="./script.js"></script>
     <!-- <script src="./modules/exercises.js"></script> -->
