--- a/JavaScript/animaisFantasticos/index.html
+++ b/JavaScript/animaisFantasticos/index.html
@@ -15,6 +15,17 @@
       <nav class="menu" data-menu="suave">
         <ul>
           <li><a href="#animais">Animais</a></li>
+
+          <li data-dropdown>
+            <a href="sobre.html">Sobre</a>
+            <ul class="dropdown-menu">
+              <li><a href="empresa.html">Empresa</a></li>
+              <li><a href="socios.html">Sócios</a></li>
+              <li><a href="equipe.html">Equipes</a></li>
+              <li><a href="investidores.html">Investidores</a></li>
+            </ul>
+          </li>
+
           <li><a href="#faq">FAQ</a></li>
           <li><a href="#contato">Contato</a></li>
           <li><a href="" data-modal="open">Login →</a></li>
