--- a/JavaScript/fantasticAnimals/index.html
+++ b/JavaScript/fantasticAnimals/index.html
@@ -268,6 +268,7 @@
           <li>+55 (11) 9999-9999</li>
           <li>Rua do Conde, nº 21</li>
           <li>São Paulo - SP</li>
+          <li data-week="1,2,3,4,5" data-hour="8,18">Seg à Sex das 8 às 18</li>
         </ul>
       </section>
 
