--- a/JavaScript/slide/index.html
+++ b/JavaScript/slide/index.html
@@ -6,7 +6,18 @@
     <link rel="stylesheet" href="styles.css" />
     <title>Slide</title>
   </head>
+
   <body>
+    <div class="slide-wrapper">
+      <ul class="slide">
+        <li><img src="./img/foto1.jpg" alt="Imagem ilustrativa" /></li>
+        <li><img src="./img/foto2.jpg" alt="Imagem ilustrativa" /></li>
+        <li><img src="./img/foto3.jpg" alt="Imagem ilustrativa" /></li>
+        <li><img src="./img/foto4.jpg" alt="Imagem ilustrativa" /></li>
+        <li><img src="./img/foto5.jpg" alt="Imagem ilustrativa" /></li>
+        <li><img src="./img/foto6.jpg" alt="Imagem ilustrativa" /></li>
+      </ul>
+    </div>
     <script type="module" src="js/script.js"></script>
   </body>
 </html>
