--- a/typescript/vite/index.html
+++ b/typescript/vite/index.html
@@ -1,5 +1,5 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -7,7 +7,11 @@
     <title>Vite + TS</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <p id="#text">Copiar esse texto</p>
+      <button data-clipboard-target="#text">Copiar</button>
+    </div>
+
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
