--- a/typescript/data/index.html
+++ b/typescript/data/index.html
@@ -2,12 +2,33 @@
 <html lang="pt-pr">
   <head>
     <meta charset="UTF-8" />
+
+    <link rel="stylesheet" href="/src/style.css" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fetch Data</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <section>
+        <h2>Dados</h2>
+
+        <table id="transactions">
+          <thead>
+            <tr>
+              <th>Nome</th>
+              <th>Email</th>
+              <th>Compra</th>
+              <th>Pagamento</th>
+              <th>Status</th>
+            </tr>
+          </thead>
+
+          <tbody></tbody>
+        </table>
+      </section>
+    </div>
+
     <script type="module" src="/src/script.ts"></script>
   </body>
 </html>
