--- a/typescript/data/index.html
+++ b/typescript/data/index.html
@@ -11,6 +11,12 @@
   <body>
     <div id="app">
       <section>
+        <h2>Estatísticas</h2>
+
+        <div>
+          <p id="sum">Total: <span></span></p>
+        </div>
+
         <h2>Dados</h2>
 
         <table id="transactions">
