--- a/typescript/data/index.html
+++ b/typescript/data/index.html
@@ -23,6 +23,8 @@
         <h3>Soma dos status de pagamento:</h3>
         <div id="status"></div>
 
+        <p id="day">Dia com mais vendas: <span></span></p>
+
         <h2>Dados</h2>
 
         <table id="transactions">
